docs: revamp with documentation sections